<resources>
    <string name="app_name">ระบบ SmartGrass</string>

    <!-- Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Header -->
    <string name="header_sale">ระบบงานขาย</string>

    <!-- Action Menu-->
    <string name="action_settings">Settings</string>
    <string name="drawer_menu_task">ระบบงาน</string>
    <string name="drawer_menu_suggestion">ระบบแนะนำหญ้า</string>
    <string name="drawer_menu_logout">ออกจากระบบ</string>

    <!-- Login -->
    <string name="login_hint_username">ใส่ชื่อผู้ใช้</string>
    <string name="login_hint_password">ใส่รหัสผ่าน</string>
    <string name="login_btn_login">เข้าสู่ระบบ</string>
    <string name="login_error_username_msg">กรุณาระบุชื่อผู้ใช้</string>
    <string name="login_error_password_msg">กรุณาระบุรหัสผ่าน</string>
    <!-- End -->

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>


    <!-- Main Dialog-->
    <string name="main_dialog_event_evaluation">ประเมินหน้างาน</string>
    <string name="main_dialog_event_show_details">ดูรายละเอียดงาน</string>
    <string name="main_dialog_event_show_direction">แสดงแผนที่สถานที่ติดตั้ง</string>
    <string name="main_dialog_event_install">ดำเนินการติดตั้ง</string>
    <string name="main_dialog_event_check">ดำเนินการตรวจรับ</string>
    <string name="main_dialog_event_deliver">จัดส่ง</string>

    <!-- Create Order-->
    <string name="create_order_tile_label">ข้อมูลที่จำเป็น</string>
    <string name="create_order_first_name_last_name">ชื่อ - นามสกุล</string>
    <string name="create_order_email">Email</string>
    <string name="create_order_tel">เบอร์ติดต่อ</string>
    <string name="create_order_address">ที่อยู่</string>
    <string name="create_order_location">พิกัดบนแผนที่</string>
    <string name="create_order_appointment">นัดหมาย</string>
    <string name="create_order_request_type_label">ประเภทคำสั่ง</string>
    <string name="create_order_request_type_1">ซื้อไปติดตั้งเอง</string>
    <string name="create_order_request_type_2">ให้ทางร้านติดตั้ง</string>
    <string name="create_order_grass_type_label">ประเภทหญ้าเทียม</string>
    <string name="create_order_grass_type_1">จัดสวน</string>
    <string name="create_order_grass_type_2">สนามกีฬา</string>

    <!-- Button-->
    <string name="button_cancel">ยกเลิก</string>
    <string name="button_save">บันทึก</string>
    <string name="button_next">ขั้นตอนถัดไป</string>

    <!-- Choose Location -->

    <!-- Choose type order -->
    <string name="order_type_1">ซื้อไปติดตั้งเอง</string>
    <string name="order_type_2">ร้านติดตั้งให้</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>


    <!-- Work Details -->
    <string name="action_navigate">แผนที่</string>
    <string name="action_explore">ประเมินพื้นที่หน้างาน</string>
    <string name="action_implement">ยืนยันการติดตั้ง</string>
    <string name="action_delivery">ยืนยันการจัดส่ง</string>

</resources>
