<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgThumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_grass_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black_80_transparent"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_5dp_white_transparent_left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/ic_username" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"></View>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_5dp_white_transparent_right"
                android:hint="@string/login_hint_username"
                android:padding="15dp"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/round_5dp_white_transparent_left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/ic_password" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"></View>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_5dp_white_transparent_right"
                android:hint="@string/login_hint_password"
                android:padding="15dp"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"></View>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_5dp_white_solid"
            android:padding="15dp"
            android:text="@string/login_btn_login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>


